              that may be null.
            - Renamed findStrictAngleStructure() to strictAngleStructure();
              moreover, this now returns by const reference if a solution
              exists and throws an exception otherwise.
            - Renamed isThreeSphere() and knowsThreeSphere() to isSphere() and
              knowsSphere().  The old names are kept as deprecated aliases.
            - New routines inAnyPacket() and isSnapPea().
            - Functions snapPea() and saveSnapPea() are no longer virtual.
            - The Link constructor is now deprecated, since Link::complement()
              is more efficient and now returns by value.
            - New static routine fromGluings().  This replaces the old
              insertConstruction(), which is now deprecated.
            - Function enterTextTriangulation() returns by value, not pointer.
            - Routine fromSnapPea() now returns by value (not pointer), and
              throws an exception on error (instead of returning null).
            - Routine rehydrate() now returns by value, not pointer; also,
              both rehydrate() and insertRehydration() now throw exceptions on
              error instead of indicating this through return values.
            - Routines dehydrate(), snapPea(), recogniser() and recognizer()
              now throw an exception if the triangulation is not supported,
              instead of returning empty output.
            - Routine turaevViro() now always runs in the current thread,
              even if a progress tracker was passed.
            - Both turaevViro() and turaevViroApprox() now use ALG_TREEWIDTH
              as their default algorithm.  You can access the old algorithm
              by passing ALG_BACKTRACK.
            - Routine connectedSumWith() now adds fewer tetrahedra (thanks
              to Adele Jackson).
            - Changed maximalForestInSkeleton() to return by value